whoami/whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "50m"  
        image: traefik/traefikee-webapp-demo:v2
        imagePullPolicy: Always
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami-tcp
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-tcp
  template:
    metadata:
      labels:
        app: whoami-tcp
    spec:
      containers:
      - name: whoami-tcp
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "32Mi"
            cpu: "50m"  
        image: traefik/whoamitcp
        args:
          - --port=:3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: apps
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: whoami
  selector:
    app: whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tcp
  namespace: apps
  labels:
    app: whoami-tcp
spec:
  type: ClusterIP
  ports:
  - port: 3000
    name: whoami-tcp
  selector:
    app: whoami-tcp
