whoami/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
      kind: Gateway
  hostnames:
    - whoami.dbl24tst5w47.mageekbox.eu
  rules:
    - backendRefs:
        - name: whoami
          namespace: apps
          port: 80
