whoami/whoami-tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: whoami-tcproute
  namespace: apps
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: webtcp
      kind: Gateway
  rules:
    - backendRefs:
        - name: whoami-tcp
          namespace: apps
          port: 3000
